# articles-analysis-service

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: my.env
ml/: Dockerfile  app.py
ml/src/: main_components.py  utils.py
ml/src/managers/: chunk_manager.py  mysql_manager.py  qdrant_manager.py
ml/src/pipelines/: analyze.py  make_onthology.py  prepare_answers.py  summarize.py
ml/src/prompts/: answer_the_question-system.txt  fetch_terms-system.txt  fetch_terms_from_query-system.txt  final_summarization-system.txt  final_summarization-user.txt  find_relations-system.txt  remove_doubles-system.txt  remove_doubles-user.txt  summarize-system.txt  summarize-user.txt  terms_typing-system.txt
shared/: schemas.py
src/: basic_components.py  get_documents.py  main.py
web/: Dockerfile
web/src/: app.py
web/src/templates/: index.html
