[project]
name = "articles-qna"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Serebrennikov",email = "serebr911-1@yandex.ru"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "langchain-community (>=0.3.29,<0.4.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
