[project]
name = "articles-qna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.3.1",
    "cryptography>=46.0.3",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.3",
    "langchain-qdrant>=1.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "pymysql>=1.1.2",
    "uvicorn>=0.38.0",
]
